--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "sample-plasmo-2",
-  "displayName": "Sample plasmo 2",
+  "name": "summary-current-tab",
+  "displayName": "Sumary Current Tab",
   "version": "0.0.1",
-  "description": "A basic Plasmo extension.",
+  "description": "Summarize the current tab in LLM.",
   "author": "fuchigta",
   "scripts": {
     "dev": "plasmo dev",
@@ -10,10 +10,18 @@
     "package": "plasmo package"
   },
   "dependencies": {
+    "@langchain/google-genai": "^0.1.6",
+    "@langchain/openai": "^0.3.17",
+    "@plasmohq/storage": "^1.13.0",
+    "@types/turndown": "^5.0.5",
+    "langchain": "^0.3.11",
+    "marked": "^15.0.6",
     "plasmo": "0.89.4",
+    "postcss": "^8.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.4.1"
+    "tailwindcss": "^3.4.17",
+    "turndown": "^7.2.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
@@ -21,13 +29,25 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
-    "postcss": "8.4.33",
     "prettier": "3.2.4",
     "typescript": "5.3.3"
   },
   "manifest": {
     "host_permissions": [
       "https://*/*"
+    ],
+    "permissions": [
+      "activeTab",
+      "tabs",
+      "scripting"
     ]
+  },
+  "pnpm": {
+    "overrides": {
+      "@langchain/core": "0.3.31"
+    }
+  },
+  "overrides": {
+    "@langchain/core": "0.3.31"
   }
 }
