コンテキストメニューの追加

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "permissions": [
       "activeTab",
       "tabs",
-      "scripting"
+      "scripting",
+      "contextMenus"
     ]
   },
   "pnpm": {
