--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
             ${{ runner.os }}-
       - uses: pnpm/action-setup@v4
         with:
-          version: latest
+          version: 9
           run_install: true
       - name: Use Node.js LTS
         uses: actions/setup-node@v4
